# data-contract-enforcer

./: DOMAIN_NOTES.md  README.md  canonical_schema.md  data_flow_diagran.md  interim_report.md  pyproject.toml  requirements.txt
contract_registry/: subscriptions.yaml
contracts/: ai_extensions.py  attributor.py  baseline_store.py  dbt_emit.py  generator.py  report_generator.py  runner.py  schema_analyzer.py
enforcer_report/: report_2026-04-04-test.json  report_2026-04-04-test.md  report_2026-04-04.json  report_2026-04-04.md
generated_contracts/: langsmith_traces.yaml  week1_intent_records.yaml  week3-document-refinery-extractions.yaml  week3_extractions.yaml  week3_extractions_dbt.yml  week4_lineage.yaml  week5_events.yaml  week5_events_dbt.yml
outputs/: extracted_keys.json
outputs/migrate/: README.md  _common.py  migrate_langsmith_trace.py  migrate_week1.py  migrate_week2.py  migrate_week3.py  migrate_week4.py  migrate_week5.py
outputs/traces/: run.jsonl
outputs/week1/: intent_records.jsonl
outputs/week3/: extractions.jsonl  extractions_violated.jsonl
outputs/week4/: lineage_snapshots.jsonl
reports/: validation_report.json  validation_report_first.json
schema_snapshots/: _ai_test_baseline.npz  baselines.json  embedding_baselines.npz  embedding_baselines_openrouter.npz
scripts/: check_keys.py  check_score.py  create_violation.py
validation_reports/: _rubric_test.json  ai_extensions.json  schema_evolution_week3.json  validation_report.json  violated_run.json  week3.json  week5.json
violation_log/: attributed_violations.jsonl  violations.jsonl
(+11 files in other folders)
