[project]
name = "data-contract-enforcer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
profiling = ["ydata-profiling>=4.0"]
ai = ["numpy>=1.24", "openai>=1.0", "jsonschema>=4.0", "python-dotenv>=1.0"]
report = ["fpdf2>=2.7.0"]
